<resources>
    <string name="app_name">Hungryist</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">I have read and agree to the terms and conditions.</string>
    <string name="register">Register</string>
    <string name="log_in_underline" translatable="false"><u>Log in</u></string>
    <string name="find_best_places_to_hang_out_with_your_loved_ones">Find best places to hang out with your loved ones</string>
    <string name="explore_new_places_with_us">Explore new places with us</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="search_hint">Restaurants, cafés or meals</string>
    <string name="filter_button_description">For filtering restaurants!</string>
    <string name="home">Home</string>
    <string name="nearby_places">Nearby places</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="deals_of_month">Deals of month</string>
    <string name="restaurants">Restaurants</string>
    <string name="mezzo">Mezzo</string>
    <string name="_220_dilara_aliyeva_baku">220 Dilara Aliyeva, Baku</string>
    <string name="open_now">Open now</string>
    <string name="closed_now">Closed now</string>
    <string name="open_and_close_times">%s - %s</string>
    <string name="reviews">%s reviews</string>
    <string name="reviews_info">Reviews</string>
    <string name="details">Details</string>

    //Facebook
    <string name="fb_login_protocol_scheme">fb1234</string>

    <string name="free_wifi">Free wifi</string>
    <string name="booking_mandatory">Booking mandatory</string>
    <string name="live_music_every_night">Live music every night</string>
    <string name="order_in_advance">Order in advance</string>
    <string name="smoking_area">Smoking area</string>
    <string name="studying_condition">Studying condition</string>
    <string name="expand_icon_description">Is responsible for expanding showing expansion of Schedule</string>
    <string name="clock_icon">Schedule clock icon</string>
    <string name="location">Location</string>
    <string name="visit_website"><u>Visit website</u></string>
    <string name="video_location">Video location</string>
    <string name="book_a_table">Book a table</string>
    <string name="rating">Rating</string>
    <string name="back_button">Back button</string>
    <string name="menu">Menu</string>
    <string name="main_frame">Main frame</string>

    <string name="rating_info">%s/5</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interior">Interior</string>
    <string name="search_for_meal">Search for a meal</string>
    <string name="go_to_your_orders"><u>Go to your orders</u></string>
    <string name="see_all"><u>See all</u></string>
    <string name="on_sale">On sale</string>
    <string name="notify_me">Notify me</string>
    <string name="cost_in_dollar">%s $</string>
    <string name="not_on_sale">Not on sale</string>
    <string name="interior_image">Interior image</string>
    <string name="count_more_items">+%d</string>
    <string name="profile_picture">Profile picture</string>
    <string name="sequence">%d/%d</string>
    <string name="forgot_password_underline"><u>Forgot password?</u></string>
    <string name="forgot_password">Forgot password?</string>

    <string name="facebook_application_id" translatable="false">com.example.hungryist</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbcom.example.hungryist</string>
    <string name="phone_number">Phone number</string>
    <string name="have_an_account">Have an account?</string>
    <string name="web_client_id">800269451622-v75nlu4j0tc5njb26kul9bo0d2cs3aha.apps.googleusercontent.com</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="log_in">Log in</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="terms_of_conditions">Terms of conditions</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>


    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_underline"><u>Register</u></string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="terms_and_conditions_warning">Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy!</string>
    <string name="less_than_6">The password can\'t be less than 6!</string>
    <string name="unknown">Unknown</string>
    <string name="open">Open\n</string>
    <string name="close">Close</string>
    <string name="save_changes">Save changes</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="name_surname">%s %s</string>
    <string name="e_mail_error">E-mail is not valid!</string>
    <string name="phone_number_error">Phone number is not valid!</string>
    <string name="no_saved">No saved</string>
    <string name="to_have_saved_places_you_need_to_register_or_log_in">To have saved places you need to register or log in</string>
    <string name="must_be_registered_info">To have saved places you need to register or log in</string>
    <string name="empty_save_list_info">Your saved places will be shown here\n</string>
    <string name="denied_info">Permission denied. Please allow access to continue!</string>
    <string name="no_results_found">No results found</string>
    <string name="no_filter_info">There is no match for this filter</string>
    <string name="filter">Filter</string>
    <string name="place">Place</string>
    <string name="meal">Meal</string>
    <string name="restaurant">Restaurant</string>
    <string name="enter_location">Enter location</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="choose_meal">Choose meal</string>
    <string name="apply_filter">Apply filter</string>
    <string name="distance_m">%s m</string>
    <string name="price_azn">%d AZN</string>
    <string name="cafe">Café</string>
    <string name="customFilter">Custom filter</string>
    <string name="title_activity_search_location">SearchLocationActivity</string>
    <string name="current_location_msg">Set your current location</string>
    <string name="add">Add</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="permission_denied_message">You must give permission to the app for your setting your current location!</string>
    <string name="empty_location_info">You must set a location</string>
    <string name="empty_profile_title">You didn’t log in</string>
    <string name="empty_profile_description">You can’t see any profile details until you register or log in</string>
    <string name="choose_location_info">Choose the location where you want to find nearby places</string>
    <string name="choose_from_map">Choose from map</string>
    <string name="update_required_info">New version of this app is available. Update now!</string>
    <string name="update_now">Update now</string>
    <string name="exit">Exit</string>
    <string name="forgot_password_description">Enter your registered email or phone number below to receive password reset instruction</string>
    <string name="send">Send</string>
    <string name="reset_success_message">Password sent to your email!</string>
    <string name="empty_email_info">Email can\'t be empty!</string>
    <string name="reset_email_sent_message">Reset message sent to your email!</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="large_text">
        "Find your perfect bite: Restaurants and cafes with menus, reservations, and more!\n\n"
        "Our app simplifies finding the perfect cafe or restaurant for any occasion. Explore detailed information on thousands of venues, including prices, opening hours, menus, reviews, special offers, and ratings (meals, service, interior). Visual previews let you see the ambience before you go. Filter your search by distance, type of cuisine, price range, and customer rating. Book a table seamlessly and enjoy a stress-free dining experience. Download our app today and discover your next culinary adventure!\n\n"

        "You will need Hungryist if you:\n\n"
            "• are hungry and can't find the exact place for your needs.\n"
            "• want to end searching on multiple sites.\n"
            "• need all the information in one place.\n"
            "• believe it would be beneficial to filter places and meals according to your preferences.\n\n"

        "In today's fast-paced world, finding the perfect place to dine can be a daunting task. With an abundance of options available, ranging from local eateries to fine dining establishments, navigating the culinary landscape can be overwhelming. That's where Hungryist comes in.\n\n"

        "Hungryist is more than just a dining app; it's your ultimate companion for all things food-related. Whether you're craving a cozy cafe, a trendy bistro, or a five-star restaurant, Hungryist has you covered. With its intuitive interface and comprehensive database, finding your next culinary adventure has never been easier.\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>