<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.details.DetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/freeWIFI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="11dp"
                android:text="@string/free_wifi"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_wifi" />

            <TextView
                android:id="@+id/bookingMandatory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawablePadding="11dp"
                android:text="@string/booking_mandatory"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_booking" />

            <TextView
                android:id="@+id/liveMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawablePadding="11dp"
                android:text="@string/live_music_every_night"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_music" />

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawablePadding="11dp"
                android:text="@string/order_in_advance"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_order" />

            <TextView
                android:id="@+id/smokingArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawablePadding="11dp"
                android:text="@string/smoking_area"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_smoking" />

            <TextView
                android:id="@+id/studyingCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawablePadding="11dp"
                android:text="@string/studying_condition"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_studying" />

            <View
                style="@style/Divider"
                android:layout_marginTop="24dp" />

            <RelativeLayout
                android:id="@+id/layoutExpandSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ic_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/clock_icon"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/txtOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toStartOf="@+id/icExpandSchedule"
                    android:layout_toEndOf="@id/ic_clock"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    tools:text="Open now" />

                <ImageView
                    android:id="@+id/icExpandSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/expand_icon_description"
                    android:src="@drawable/ic_expand_down" />

            </RelativeLayout>

            <View
                android:id="@+id/dividerRecyclerOpenDate"
                style="@style/Divider"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerOpenDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:visibility="gone" />

            <View
                android:id="@+id/dividerRating"
                style="@style/Divider"
                android:layout_marginTop="24dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/layoutExpandRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/icExpand"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/icExpand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/expand_icon_description"
                    android:src="@drawable/ic_expand_down" />

            </RelativeLayout>

            <View
                android:id="@+id/dividerBelowRating"
                style="@style/Divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <View
                android:id="@+id/dividerRecyclerRating"
                style="@style/Divider"
                android:layout_marginTop="24dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:drawablePadding="8dp"
                android:text="@string/_220_dilara_aliyeva_baku"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_nearby_places" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mapFragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <ImageView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone_numbers"
                    android:src="@drawable/ic_phone"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="9dp"
                    android:layout_toEndOf="@id/phoneNumber" />
            </RelativeLayout>

            <TextView
                android:id="@+id/visitWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="7dp"
                android:gravity="center"
                android:text="@string/visit_website"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_link" />

            <TextView
                android:id="@+id/videoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/video_location"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="4dp">

                <VideoView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="11dp"
                android:text="@string/book_a_table"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>