<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_detailed_info_scene"
    tools:context=".ui.activity.detailedinfo.DetailedInfoActivity">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_frame"
        android:translationZ="-1dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        android:focusable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/mainImage"
        app:layout_constraintTop_toTopOf="@id/mainImage" />

    <ImageView
        android:id="@+id/savedSticker"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/saved"
        android:focusable="true"
        android:src="@drawable/ic_unsaved_sticker"
        app:layout_constraintEnd_toEndOf="@id/mainImage"
        app:layout_constraintTop_toTopOf="@id/mainImage" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainImage"
        app:layout_constraintStart_toStartOf="@id/mainImage"
        tools:text="Mezzo/28 may filialı" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainImage"
        app:layout_constraintEnd_toEndOf="@id/mainImage"
        tools:text="3.5k reviews" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/reviews"
        app:layout_constraintEnd_toEndOf="@id/mainImage"
        tools:text="4.1/5" />

    <ImageView
        android:id="@+id/icRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filled_star"
        app:layout_constraintBottom_toBottomOf="@+id/rating"
        app:layout_constraintEnd_toStartOf="@+id/rating"
        app:layout_constraintTop_toTopOf="@+id/rating" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainImage"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/MyCustomTextAppearance"
        app:tabTextColor="@color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.motion.widget.MotionLayout>